--- a/source-styles.scss
+++ b/source-styles.scss
@@ -1,44 +1,61 @@
+
+
 body {
-  background: blue; }
-  body #results {
+  background: blue;
+  #results{
     width: 100%;
     background-color: #82e0ff;
     position: absolute;
-    top: 12.5%; }
-    body #results h1 {
+    top: 12.5%;
+
+    h1 {
       font-family: 'Bungee Shade', cursive;
       font-size: 7vw;
       padding: 5% 0 5% 0;
-      text-align: center; }
-  body #param-wrapper {
+      text-align: center;
+    }
+  }
+  #param-wrapper{
     width: 95%;
     margin-left: 2.5%;
+
     height: 100%;
-    position: relative; }
-    body #param-wrapper div {
+    position: relative;
+
+    div{
       margin: 0;
       position: absolute;
       top: 50%;
-      transform: translateY(-50%); }
-      body #param-wrapper div h2, body #param-wrapper div input {
+      transform: translateY(-50%);
+
+      h2, input {
         display: inline-block;
         font-size: 5vw;
+
         color: #efefef;
-        font-family: 'ABeeZee', sans-serif; }
-      body #param-wrapper div input {
+        font-family: 'ABeeZee', sans-serif;
+      }
+
+      input {
         background-color: rgba(0, 0, 0, 0);
         outline: none;
         border: 2px dashed #efefef;
         width: 7.5vw;
-        margin: 2vw 1vw 1vw 2vw; }
-      body #param-wrapper div input[type=number]:focus {
-        border: 4px solid #ff7967; }
-      body #param-wrapper div button {
+        margin: 2vw 1vw 1vw 2vw;
+      }
+      input[type=number]:focus {
+        border: 4px solid #ff7967;
+      }
+
+      button {
         border-radius: 15px;
         font-family: 'ABeeZee', sans-serif;
         font-size: 7.5vw;
         width: 30%;
         padding: 2% 2% 2% 2%;
-        margin: 5% auto auto 35%; }
 
-/*# sourceMappingURL=styles.css.map */
+        margin: 5% auto auto 35%;
+      }
+    }
+  }
+}
