--- a/source-styles.scss
+++ b/source-styles.scss
@@ -58,4 +58,17 @@ body {
       }
     }
   }
+  #watr-wrapper{
+    width: 95%;
+    margin-left: 2.5%;
+
+    h1 {
+      width: 100%;
+      margin-top: 5%;
+      font-family: 'ABeeZee', sans-serif;
+      font-size: 10vw;
+      color: #efefef;
+      text-align: center;
+    }
+  }
 }
