--- a/styles.css
+++ b/styles.css
@@ -40,5 +40,29 @@ body {
         width: 30%;
         padding: 2% 2% 2% 2%;
         margin: 5% auto auto 35%; }
+  body #watr-wrapper {
+    width: 95%;
+    margin-left: 2.5%;
+    /*#watr-header {
+      width: 100%;
+      margin-top: 5%;
+      font-family: 'ABeeZee', sans-serif;
+      font-size: 2.5vw;
+      color: #efefef;
+      text-align: center;
+      h1{
+        float: right;
+      }
+      h2{
+        float: left;
+      }
+    }*/ }
+    body #watr-wrapper h1 {
+      width: 100%;
+      margin-top: 5%;
+      font-family: 'ABeeZee', sans-serif;
+      font-size: 10vw;
+      color: #efefef;
+      text-align: center; }
 
 /*# sourceMappingURL=styles.css.map */
