--- a/source-styles.scss
+++ b/source-styles.scss
@@ -2,6 +2,22 @@
 
 body {
   background: blue;
+  #bg {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    min-width: 100%;
+    min-height: 100%;
+    width: auto;
+    height: auto;
+    z-index: -100;
+    -ms-transform: translateX(-50%) translateY(-50%);
+    -moz-transform: translateX(-50%) translateY(-50%);
+    -webkit-transform: translateX(-50%) translateY(-50%);
+    transform: translateX(-50%) translateY(-50%);
+    background: url(polina.jpg) no-repeat;
+    background-size: cover;
+  }
   #results{
     width: 100%;
     background-color: #82e0ff;
@@ -61,6 +77,7 @@ body {
   #watr-wrapper{
     width: 95%;
     margin-left: 2.5%;
+    height: 100%;
 
     h1 {
       width: 100%;
@@ -69,6 +86,39 @@ body {
       font-size: 10vw;
       color: #efefef;
       text-align: center;
+    }
+    #tracker-wrap {
+      width: 75%;
+      height: 60%;
+      margin: 10% auto 10% 12.5%;
+      background: url("tracker.svg") no-repeat top left;
+      background-size: contain;
+
+      position: relative;
+
+      div{
+        position: absolute;
+        top: 50%;
+        transform: translateY(-60%);
+        width: 100%;
+
+        h1{
+          text-align: center;
+          width: 20%;
+          margin-left: 40%;
+          color: #232323;
+        }
+        #count-print{
+          padding-bottom: 5%;
+          margin-bottom: 5%;
+          border-bottom: solid 10px black;
+        }
+      }
+
+    }
+    #reset {
+      width: 20%;
+      margin: auto auto auto 40%;
     }
   }
 }
